--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -231,24 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stderr",
+     "name": "stdout",
      "text": [
-      "C:\\Users\\Rht62\\anaconda3\\envs\\tf\\lib\\site-packages\\xgboost\\sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
-      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n",
-      "[20:48:22] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.3.0/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "Accuracy: 0.7857341104635026\n",
-      "Precison: 0.8978165938864628\n",
-      "Recall: 0.6108140225787284\n",
-      "F1 Score: 0.727015558698727\n",
-      "ROC Score:  0.8074894162210338\n",
-      "Confusion Matrix:\n",
-      "[[1803  117]\n",
-      " [ 655 1028]]\n"
+      "Accuracy: 0.8254232583957813\nPrecison: 0.8675034867503487\nRecall: 0.7391562685680333\nF1 Score: 0.7982034007058069\nROC Score:  0.8382798573975044\nConfusion Matrix:\n[[1730  190]\n [ 439 1244]]\n"
      ]
     },
     {
@@ -259,7 +249,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 3
     }
    ],
    "source": [
